--- a/styles/main.css
+++ b/styles/main.css
@@ -1,20 +1,446 @@
+@charset "UTF-8";
 html,
 body {
   position: relative;
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
   margin: 0;
   padding: 0;
+}
+body header {
+  width: 100%;
+  height: 62px;
+  background-color: #fff;
+  border-bottom: 1px solid #111;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 70px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+}
+body header .h_left {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+}
+body header .h_left .menu_bar {
+  transform: translateY(3px);
+  margin-right: 40px;
+}
+body header .h_left .menu_bar a span {
+  height: 2px;
+  width: 24px;
+  content: "";
+  display: block;
+  background-color: #111;
+  margin-bottom: 8px;
+}
+body header .h_left .logo_toggle {
+  border: 1px solid #333;
+  border-radius: 30px;
+  height: 30px;
+  transform: translateY(-3px);
+  padding: 1px;
+}
+body header .h_left .logo_toggle .toggle_bg {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+}
+body header .h_left .logo_toggle .toggle_bg a:nth-child(1) {
+  background-color: #4d5ad6;
+  padding: 4px 20px;
+  border-radius: 30px;
+}
+body header .h_left .logo_toggle .toggle_bg a:nth-child(2) {
+  padding: 4px 40px;
+  border-radius: 30px;
+}
+body header nav {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+}
+body header nav a {
+  margin-left: 50px;
+  font-weight: 800;
+}
+body header nav a span {
+  font-weight: 800;
+}
+body main .menu_info {
+  background-color: #fff;
+  position: fixed;
+  z-index: 999;
+  height: 100vh;
+  width: 100%;
+}
+body main .menu_info .menu_top {
+  height: 62px;
+  width: 100%;
+  padding: 10px 76px;
+}
+body main .menu_info .menu_top .menu_bar {
+  transform: translateY(3px);
+  margin-right: 40px;
+}
+body main .menu_info .menu_top .menu_bar a span {
+  height: 2px;
+  width: 30px;
+  content: "";
+  display: block;
+  background-color: #111;
+  margin-bottom: 16px;
+}
+body main .menu_info .menu_top .menu_bar a span:nth-child(1) {
+  transform: rotate(45deg) translate(7px, 20px);
+}
+body main .menu_info .menu_top .menu_bar a span:nth-child(2) {
+  transform: rotate(-45deg) translate(-7px, -6px);
+}
+body main .menu_info .text_box {
+  display: block;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  padding: 150px 0 150px;
+}
+body main .menu_info .text_box a:hover {
+  background-image: url(../images/intro/line2.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+body main .menu_info .text_box a {
+  text-align: center;
+  display: inline-block;
+  width: 50%;
+  font-size: 6rem;
+  letter-spacing: 0.04rem;
+}
+body main .menu_info .text_box a span {
+  font-size: 6rem;
 }
 body main .area {
   width: 100%;
   height: 100vh;
+}
+body main .intro .intro_front {
+  background-image: url(../images/intro/bg_wh_shadow.png);
+  background-size: cover;
+  background-position-y: center;
+  background-color: #4d5ad6;
+  height: 100vh;
+  width: 100%;
+}
+body main .intro .intro_front h1:nth-child(1) {
+  font-family: "NewYork";
+  font-size: 13rem;
+  text-align: center;
+  padding-top: 270px;
+  line-height: 15rem;
+}
+body main .intro .intro_front h1:nth-child(2) {
+  font-family: "NewYork";
+  font-size: 14rem;
+  text-align: center;
+  text-shadow: 40px 30px 13px rgba(0, 0, 0, 0.24);
+}
+body main .intro .intro_front p {
+  font-size: 3.6rem;
+  text-align: center;
+}
+body main .intro .intro_front .img_animation .circle::before {
+  position: absolute;
+  top: 180px;
+  left: 100px;
+  background-color: #fff;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  content: "";
+  display: inline-block;
+}
+body main .intro .intro_front .img_animation .circle img {
+  animation: rotate360 17s linear infinite;
+  position: absolute;
+  width: 180px;
+  top: 200px;
+  left: 150px;
+}
+body main .intro .intro_front .img_animation .flower img {
+  transform: rotate(-20deg);
+  position: absolute;
+  width: 260px;
+  top: 560px;
+  left: 70px;
+  animation: up_down 3s ease infinite;
+}
+body main .intro .intro_front .img_animation .dollar img {
+  transform: rotate(15deg);
+  position: absolute;
+  width: 200px;
+  top: 220px;
+  right: 110px;
+  animation: up_down_dr 3s ease reverse infinite;
+}
+body main .intro .intro_web {
+  background-image: url(../images/intro/bg_bk_crop_shadow.png);
+  background-size: contain;
+  background-position-y: bottom;
+  background-repeat: no-repeat;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #222;
+}
+body main .intro .intro_web h1:nth-child(1) {
+  font-family: "NewYork";
+  font-size: 13rem;
+  text-align: center;
+  padding-top: 270px;
+  line-height: 15rem;
+  color: #fff;
+}
+body main .intro .intro_web h1:nth-child(2) {
+  font-family: "NewYork";
+  font-size: 14rem;
+  text-align: center;
+  color: #fff;
+  text-shadow: 40px 30px 13px rgba(0, 0, 0, 0.24);
+}
+body main .intro .intro_web h3 {
+  position: absolute;
+  top: 350px;
+  right: 124px;
+  color: #fff;
+  font-size: 4.3rem;
+  z-index: 200;
+  transform: rotate(-5deg);
+  background-color: rgba(253, 253, 253, 0.25);
+  padding: 5px 20px;
+  border-top-right-radius: 40px;
+  border-bottom-left-radius: 40px;
+  font-weight: 200;
+}
+body main .intro .intro_web p:nth-child(4) {
+  font-size: 2.4rem;
+  font-weight: 200;
+  letter-spacing: 0.02rem;
+  text-align: center;
+  position: absolute;
+  top: 190px;
+  left: 230px;
+  color: #fff;
+}
+body main .intro .intro_web p:nth-child(5) {
+  font-size: 2.4rem;
+  font-weight: 200;
+  letter-spacing: 0.02rem;
+  text-align: center;
+  position: absolute;
+  top: 240px;
+  left: 140px;
+  color: #fff;
+}
+body main .intro .intro_web p:nth-child(6) {
+  font-size: 2.4rem;
+  font-weight: 200;
+  letter-spacing: 0.02rem;
+  text-align: center;
+  position: absolute;
+  top: 290px;
+  left: 270px;
+  color: #fff;
+}
+body main .intro .intro_web p:nth-child(7) {
+  font-size: 2.4rem;
+  font-weight: 200;
+  letter-spacing: 0.02rem;
+  text-align: center;
+  position: absolute;
+  top: 340px;
+  left: 200px;
+  color: #fff;
+}
+body main .intro .intro_web .img_animation .flower img {
+  transform: rotate(12deg);
+  position: absolute;
+  width: 300px;
+  top: 130px;
+  right: 150px;
+}
+body main .port_developer {
+  height: 200vh;
+  width: 100%;
+  background-color: #f0f0f0;
+}
+body main .port_developer .developer_top {
+  padding: 150px 140px 100px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+body main .port_developer .developer_top .left p {
+  font-size: 2rem;
+}
+body main .port_developer .developer_top .center {
+  margin: 0 auto;
+}
+body main .port_developer .developer_top .center .round {
+  content: "";
+  display: inline-block;
+  border: 2px solid #222;
+  width: 46px;
+  height: 82px;
+  border-radius: 30px;
+  animation: up_down 2s ease infinite;
+}
+body main .port_developer .developer_top .center .scroll_line {
+  background-color: #222;
+  content: "";
+  display: inline-block;
+  width: 6px;
+  height: 20px;
+  border-radius: 30px;
+  transform: translate(-28px, -46px);
+  animation: scroll_move 1.8s ease infinite;
+}
+body main .port_developer .developer_top .right p {
+  font-size: 2rem;
+}
+body main .port_developer .developer_container {
+  margin: 0 auto;
+  width: 1630px;
+  border-top: 1px solid #333;
+}
+body main .port_developer .developer_container .project {
+  border-bottom: 1px solid #333;
+  padding: 20px 0;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+body main .port_developer .developer_container .project .project_left {
+  width: 30%;
+}
+body main .port_developer .developer_container .project .project_left p:nth-child(1) {
+  font-size: 3rem;
+  border-bottom: 1px solid #333;
+  display: inline-block;
+}
+body main .port_developer .developer_container .project .project_left h2 {
+  font-size: 4.5rem;
+  margin-top: 10px;
+}
+body main .port_developer .developer_container .project .project_left .brand_name:hover {
+  box-shadow: 10px 10px 1px #4d5ad6;
+  transition: 0.4s ease;
+}
+body main .port_developer .developer_container .project .project_left .brand_name {
+  font-size: 2.6rem;
+  letter-spacing: 0.1rem;
+  background-color: #222;
+  padding: 0 15px;
+  color: #fff;
+  display: inline-block;
+  margin: 10px 0 20px;
+}
+body main .port_developer .developer_container .project .project_left .hashtag span {
+  font-size: 0.75rem;
+  font-weight: 500;
+  background-color: #fff;
+  border-radius: 30px;
+  border: 1px solid #202020;
+  padding: 4px 16px;
+  line-height: 15px;
+  display: inline-block;
+  margin-bottom: 5px;
+}
+body main .port_developer .developer_container .project .project_right {
+  background-color: #333;
+  width: 60%;
+  height: 420px;
+}
+body main .port_developer .developer_container .project1 .project_right:hover {
+  filter: none;
+  transition: 0.5s linear;
+}
+body main .port_developer .developer_container .project1 .project_right {
+  background-image: url(../images/portfolio/kurly.jpg);
+  background-position: center;
+  filter: grayscale(100%);
+}
+body main .port_developer .developer_container .project2 .project_right:hover {
+  filter: none;
+  transition: 0.5s linear;
+}
+body main .port_developer .developer_container .project2 .project_right {
+  background-image: url(../images/portfolio/kurly.jpg);
+  background-position: center;
+  filter: grayscale(100%);
+}
+body main .port_developer .developer_container .project3 .project_right:hover {
+  filter: none;
+  transition: 0.5s linear;
+}
+body main .port_developer .developer_container .project3 .project_right {
+  background-image: url(../images/portfolio/kurly.jpg);
+  background-position: center;
+  filter: grayscale(100%);
+}
+body main .port_designer {
+  height: 100vh;
+  width: 100%;
+}
+body main .port_designer .web_page .deco_circle {
+  border-bottom: 1px solid #333;
+}
+body main .port_designer .web_page .designer_top {
+  overflow: hidden;
+  white-space: nowrap;
+}
+body main .port_designer .web_page .designer_top .deco_text {
+  padding: 14px 0;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  animation: text_bg 20s linear infinite both;
+}
+body main .port_designer .web_page .designer_top .deco_text p:nth-child(4n) {
+  transform: translateY(7px);
+}
+body main .port_designer .web_page .designer_top .deco_text p {
+  font-size: 3rem;
+  margin-right: 80px;
+  height: 50px;
+  letter-spacing: 0.04rem;
+}
+body main .port_designer .web_page .designer_comment {
+  padding-top: 10px;
+  padding-bottom: 40px;
+}
+body main .port_designer .web_page .designer_comment h3 {
+  font-size: 2.6rem;
+  text-align: center;
+  line-height: 2.8rem;
+}
+body main .port_designer .web_page .designer_comment p {
+  text-align: center;
+  margin-top: 16px;
 }
 body main .port_designer .web_page .swiper.swiper1 {
   width: 100%;
@@ -25,36 +451,41 @@ body main .port_designer .web_page .swiper.swiper1 {
 body main .port_designer .web_page .swiper.swiper1 .swiper-wrapper .swiper-slide {
   background-position: center;
   background-size: cover;
-  width: 300px;
-  height: 400px;
+  width: 720px;
 }
-body main .port_designer .web_page .swiper.swiper1 .swiper-wrapper .swiper-slide .swiper-slide img {
-  background-color: aqua;
-  display: block;
+body main .port_designer .web_page .swiper.swiper1 .swiper-wrapper .swiper-slide img {
   width: 100%;
+}
+body main .port_designer .contents_box {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px 0;
+  background: #f0f0f0;
+}
+body main .port_designer .contents_box .lookbook {
+  width: 50%;
 }
 body main .port_designer .contents_box .lookbook .swiper2 {
   width: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  height: 66vh;
+  padding-right: 20px;
 }
-body main .port_designer .contents_box .lookbook .swiper2 .swiper-slide {
-  background-position: center;
-  background-size: cover;
-  width: 50%;
-  height: 70vh;
+body main .port_designer .contents_box .lookbook .swiper2 .swiper-wrapper .swiper-slide {
+  width: 100%;
+  overflow: hidden;
 }
-body main .port_designer .contents_box .lookbook .swiper2 .swiper-slide .swiper-slide img {
-  display: block;
+body main .port_designer .contents_box .lookbook .swiper2 .swiper-wrapper .swiper-slide .swiper-slide img {
   width: 100%;
 }
 body main .port_designer .contents_box .viral {
-  background: #eee;
   position: relative;
-  color: #000;
   height: 100%;
   margin: 0;
   padding: 0;
+  width: 50%;
+  height: 100vh;
 }
 body main .port_designer .contents_box .viral .swiper3 {
   width: 100%;
@@ -62,22 +493,41 @@ body main .port_designer .contents_box .viral .swiper3 {
   margin-right: auto;
   height: 100%;
 }
-body main .port_designer .contents_box .viral .swiper3 .swiper-slide {
-  text-align: center;
-  font-size: 18px;
+body main .port_designer .contents_box .viral .swiper3 .swiper-wrapper .swiper-slide {
   background: #fff;
   height: calc((100% - 40px) / 3) !important;
+  text-align: center;
+  font-size: 18px;
   display: flex;
+  flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
-body main .port_designer .banner_box {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
+body main .port_designer .contents_box .viral .swiper3 .swiper-wrapper .swiper-slide img {
+  width: 100%;
+}
+body main .port_designer .contents_box .contents_comment {
+  padding: 50px 0 0 40px;
+}
+body main .port_designer .contents_box .contents_comment h2 {
+  font-size: 4.5rem;
+}
+body main .port_designer .contents_box .contents_comment .sub_comment {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: flex-start;
+  padding-top: 20px;
+}
+body main .port_designer .contents_box .contents_comment .sub_comment p:nth-child(1) {
+  font-size: 1.85rem;
+  margin-right: 150px;
+}
+body main .port_designer .contents_box .contents_comment .sub_comment p:nth-child(2) {
+  padding: 0 100px;
+}
+body main .port_designer .contents_box .contents_comment .sub_comment p:nth-child(2) span {
+  display: block;
 }
 body main .port_designer .banner_box .swiper4 {
   width: 100%;
@@ -103,5 +553,156 @@ body main .port_designer .banner_box .swiper4 .swiper-slide .swiper-slide img {
 }
 body main .profile {
   height: 100vh;
-  background-color: #111;
+  width: 100%;
+  background-color: #222;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 150px;
+}
+body main .profile .pro_left {
+  width: 50%;
+}
+body main .profile .pro_left h2 {
+  color: #fff;
+  font-size: 4.8rem;
+  letter-spacing: 0.04rem;
+  text-align: center;
+}
+body main .profile .pro_left p:nth-child(2) {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #fff;
+  font-size: 1.6rem;
+  text-align: center;
+}
+body main .profile .pro_left h3 {
+  color: #fff;
+  font-size: 2.8rem;
+  text-align: center;
+}
+body main .profile .pro_left p:nth-child(4) {
+  margin-top: 30px;
+  color: #fff;
+  font-size: 1.125rem;
+  text-align: center;
+  font-weight: 200;
+  line-height: 2.1rem;
+}
+body main .profile .pro_left p:nth-child(5) {
+  text-align: center;
+}
+body main .profile .pro_left p:nth-child(5) img {
+  padding: 50px 0 20px;
+}
+body main .profile .pro_right {
+  width: 50%;
+}
+body main .profile .pro_right h2 {
+  color: #fff;
+  font-size: 4.8rem;
+  letter-spacing: 0.04rem;
+  text-align: center;
+}
+body main .profile .pro_right .skill_box {
+  padding-top: 70px;
+  margin: 0 auto;
+  width: 50%;
+  display: grid;
+  grid-template-areas: "g1 g2 g3" "g4 g5 g6" "g7 g8 g9" "g10 g11 g12";
+}
+body main .profile .pro_right .skill_box img {
+  width: 100px;
+  border-top-left-radius: 60px;
+  border-top-right-radius: 60px;
+  border-bottom-left-radius: 60px;
+  border-bottom-right-radius: 0px;
+  margin-bottom: 13px;
+}
+body main .about {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-end;
+  padding-top: 250px;
+  width: 100%;
+  background-color: #222;
+}
+body main .about p {
+  text-align: center;
+  color: #fff;
+  padding-bottom: 50px;
+}
+body main .about p img {
+  width: 100%;
+  opacity: 0.3;
+}
+body main .about h2 {
+  font-size: 16rem;
+  letter-spacing: 0.07rem;
+  color: #fff;
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+@keyframes rotate360 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes opacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes scroll_move {
+  0% {
+    transform: translate(-28px, -46px);
+  }
+  50% {
+    transform: translate(-28px, -38px);
+  }
+  100% {
+    transform: translate(-28px, -46px);
+  }
+}
+@keyframes up_down {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  50% {
+    transform: translate(0px, 10px);
+  }
+  100% {
+    transform: translate(0px, 0px);
+  }
+}
+@keyframes up_down_dr {
+  0% {
+    transform: rotate(15deg) translate(0px, 5px);
+  }
+  50% {
+    transform: rotate(15deg) translate(0px, 15px);
+  }
+  100% {
+    transform: rotate(15deg) translate(0px, 5px);
+  }
+}
+/* 글자 움직이려면 애니메이션 */
+@keyframes text_bg {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+.display_none {
+  display: none !important;
 }/*# sourceMappingURL=main.css.map */
