--- a/styles/main.css
+++ b/styles/main.css
@@ -132,6 +132,7 @@ body main .menu_info .text_box a span {
 body main .area {
   width: 100%;
   height: 100vh;
+  line-height: 100vh; /* 스크롤이 4번 밑으로 안내려가게 설정 */
 }
 body main .intro .intro_front {
   background-image: url(../images/intro/bg_wh_shadow.png);
@@ -643,6 +644,12 @@ body main .about h2 {
   color: #fff;
   text-align: center;
   padding-bottom: 30px;
+}
+body main .wrap {
+  position: relative;
+  top: 0; /* 초기값설정 */
+  height: 100vh;
+  transition: all 0.3s;
 }
 
 @keyframes rotate360 {
