--- a/styles/main.scss
+++ b/styles/main.scss
@@ -134,6 +134,7 @@ body {
         .area {
             width: 100%;
             height: 100vh;
+            line-height: 100vh; /* 스크롤이 4번 밑으로 안내려가게 설정 */
         }
         .intro {
             .intro_front {
@@ -675,6 +676,11 @@ body {
                 text-align: center;
                 padding-bottom: 30px;
             }
+        }
+        .wrap {
+            position: relative; top:0; /* 초기값설정 */
+            height: 100vh;
+            transition: all 0.3s;
         }
     }
 }
