--- a/styles/main.scss
+++ b/styles/main.scss
@@ -967,8 +967,9 @@ body {
                 right: 0;
                 background-color: rgba(0, 0, 0, 0.87);
                 z-index: 300;
-                // @include flex-col-ct-ct;
-                [class^=skill_] {
+                @include flex-col-ct-ct;
+                > div[class^=skill_] {
+                    @include flex-col-ct-ct;
                     position: absolute;
                     right: 200px;
                     top:270px;
@@ -976,24 +977,29 @@ body {
                     border-radius: 20px;
                     width: 560px;
                     height: 580px;
-                    @include flex-col-ct-ct;
                     overflow: hidden;
                     img {
                         width:200px;
                         border-radius: 50%;
-                        margin-bottom: 30px;
+                        padding-bottom: 30px;
+                        display: block;
+                        margin: 0 auto;
                     }
                     .en_title {
+                        display: block;
                         font-weight: 600;
                         color:$blue;
                         font-size: 1.25rem;
                         margin-bottom: 8px;
+                        text-align: center;
                     }
                     .ko_title {
                         font-weight: 600;
                         color:$blue;
                         font-size: 1.75rem;
                         margin-bottom: 16px;
+                        text-align: center;
+                        display: block;
                     }
                     .text_contents {
                         span {
