--- a/styles/main.scss
+++ b/styles/main.scss
@@ -809,7 +809,7 @@ body {
                 // background-color: $dkgray;
                 background-color: #000;
                 @include flex-row-ct-st;
-                padding-top: 150px;
+                padding-top: 100px;
                 .pro_left{
                     width:50%;
                     h2 {
@@ -968,44 +968,47 @@ body {
                 right: 0;
                 background-color: rgba(0, 0, 0, 0.87);
                 z-index: 300;
-                @include flex-col-ct-ct;
-                > div[class^=skill_] {
+                .skill_box_bg {
                     @include flex-col-ct-ct;
-                    position: absolute;
-                    right: 200px;
-                    top:270px;
-                    background-color: #fff;
-                    border-radius: 20px;
-                    width: 560px;
-                    height: 580px;
-                    overflow: hidden;
-                    img {
-                        width:200px;
-                        border-radius: 50%;
-                        padding-bottom: 30px;
-                        display: block;
-                        margin: 0 auto;
-                    }
-                    .en_title {
-                        display: block;
-                        font-weight: 600;
-                        color:$blue;
-                        font-size: 1.25rem;
-                        margin-bottom: 8px;
-                        text-align: center;
-                    }
-                    .ko_title {
-                        font-weight: 600;
-                        color:$blue;
-                        font-size: 1.75rem;
-                        margin-bottom: 16px;
-                        text-align: center;
-                        display: block;
-                    }
-                    .text_contents {
-                        span {
+                    > div[class^=skill_] {
+                        @include flex-col-ct-ct;
+                        position: absolute;
+                        right: 200px;
+                        top:250px;
+                        background-color: #fff;
+                        border-radius: 20px;
+                        width: 560px;
+                        height: 580px;
+                        overflow: hidden;
+                        img {
+                            width:200px;
+                            border-radius: 50%;
+                            padding-bottom: 30px;
                             display: block;
-                            text-align: left;
+                            margin: 0 auto;
+                        }
+                        .en_title {
+                            display: block;
+                            font-weight: 600;
+                            color:$blue;
+                            font-size: 1.25rem;
+                            margin-bottom: 8px;
+                            text-align: center;
+                        }
+                        .ko_title {
+                            font-weight: 600;
+                            color:$blue;
+                            font-size: 1.75rem;
+                            margin-bottom: 16px;
+                            text-align: center;
+                            display: block;
+                        }
+                        .text_contents {
+                            padding: 16px 40px;
+                            span {
+                                display: block;
+                                text-align: left;
+                            }
                         }
                     }
                 }
