--- a/styles/main.css
+++ b/styles/main.css
@@ -432,11 +432,11 @@ body main .wrap .port_developer .developer_container .view {
   display: flex;
   flex-flow: column nowrap;
   align-items: flex-start;
-  padding: 50px 140px 20px;
+  padding: 40px 140px 20px;
 }
 body main .wrap .port_developer .developer_container .view .developer_top {
   width: 100%;
-  padding: 0px 0px 50px;
+  padding: 0px 0px 60px;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
@@ -453,8 +453,8 @@ body main .wrap .port_developer .developer_container .view .developer_top .cente
   content: "";
   display: inline-block;
   border: 2px solid #222;
-  width: 46px;
-  height: 82px;
+  width: 40px;
+  height: 73px;
   border-radius: 30px;
   animation: up_down 2s ease infinite;
 }
@@ -463,7 +463,7 @@ body main .wrap .port_developer .developer_container .view .developer_top .cente
   content: "";
   display: inline-block;
   width: 6px;
-  height: 20px;
+  height: 18px;
   border-radius: 30px;
   transform: translate(-24px, -46px);
   animation: scroll_move 1.8s ease infinite;
@@ -476,7 +476,7 @@ body main .wrap .port_developer .developer_container .view .view_box {
   justify-content: space-between;
   align-items: flex-start;
   width: 100%;
-  padding: 60px 0;
+  padding: 30px 0;
 }
 body main .wrap .port_developer .developer_container .view .view_box h1 {
   font-size: 3.8rem;
@@ -516,7 +516,7 @@ body main .wrap .port_developer .developer_container .view .view_box .project .p
 }
 body main .wrap .port_developer .developer_container .view .view_box .project .procject_box .project_left .hashtag {
   width: 80%;
-  height: 90px;
+  height: 76px;
   display: inline-block;
 }
 body main .wrap .port_developer .developer_container .view .view_box .project .procject_box .project_left .hashtag span {
@@ -531,7 +531,7 @@ body main .wrap .port_developer .developer_container .view .view_box .project .p
   margin-bottom: 5px;
 }
 body main .wrap .port_developer .developer_container .view .view_box .project .procject_box .project_left .icon_go {
-  padding: 14px 0;
+  padding: 8px 0;
   width: 100%;
 }
 body main .wrap .port_developer .developer_container .view .view_box .project .procject_box .project_left .icon_go a {
@@ -549,6 +549,13 @@ body main .wrap .port_developer .developer_container .view .view_box .project .p
   width: 20px;
   background-color: #4d5ad6;
   border-radius: 50%;
+}
+body main .wrap .port_developer .developer_container .view .view_box .project .procject_box .project_left .project_info {
+  padding-top: 10px;
+}
+body main .wrap .port_developer .developer_container .view .view_box .project .procject_box .project_left .project_info p {
+  font-size: 0.875rem;
+  line-height: 1.4rem;
 }
 body main .wrap .port_designer {
   width: 100%;
@@ -946,13 +953,13 @@ body main .wrap .skill_pop .skill_box_bg > div[class^=skill_] .text_contents spa
 }
 @keyframes scroll_move {
   0% {
-    transform: translate(-28px, -40px);
+    transform: translate(-27px, -34px);
   }
   50% {
-    transform: translate(-28px, -34px);
+    transform: translate(-27px, -30px);
   }
   100% {
-    transform: translate(-28px, -40px);
+    transform: translate(-27px, -34px);
   }
 }
 @keyframes up_title {
